Fixed modal styling on small displays

--- a/themes/shared/assets/sass/shared/modal.scss
+++ b/themes/shared/assets/sass/shared/modal.scss
@@ -56,6 +56,7 @@ html.modal-open {
     margin: 2em auto;
     background: #FFF;
     z-index: 999;
+    box-sizing: border-box !important;
     //box-sizing: border-box;
 
     > a.modal-close {
